add_library(ocdflashnor
	aduc702x.c
	at91sam3.c
	at91sam4.c
	at91sam4l.c
	at91sam7.c
	at91samd.c
	avrf.c
	cfi.c
	core.c
	drivers.c
	dsp5680xx_flash.c
	efm32.c
	em357.c
	faux.c
	fm3.c
	kinetis.c
	lpc288x.c
	lpc2000.c
	lpc2900.c
	lpcspifi.c
	mdr.c
	mini51.c
	mrvlqspi.c
	non_cfi.c
	nrf51.c
	nuc1x.c
	ocl.c
	pic32mx.c
	psoc4.c
	sim3x.c
	spi.c
	stellaris.c
	stm32f1x.c
	stm32f2x.c
	stm32lx.c
	stmsmi.c
	str7x.c
	str9x.c
	str9xpec.c
	tcl.c
	tms470.c
	virtual.c)